--- a/global.css/style.css
+++ b/global.css/style.css
@@ -51,7 +51,7 @@ header img {
     height: 120px;
     border-radius: 50%;
     object-fit: cover;
-    border: 3px solid white;
+    border: 3px solid cyan;
     box-shadow: 0 2px 5px rgba(10, 10, 10, 0.2);
     object-position: center 15%;
 }
