--- a/global.css/style.css
+++ b/global.css/style.css
@@ -14,6 +14,7 @@ body {
 .container {
     background-color: rgba(8, 8, 44, 0.9);
     display: flex;
+    width: 600px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
